--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,8 +5,7 @@
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist",
-    "rootDir": "./src"
+    "outDir": "./dist"
   },
   "include": ["src"],
   "exclude": ["node_modules"]
