--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "lucide-react": "^0.525.0",
     "mongoose": "^8.16.4",
     "next": "15.4.2",
     "react": "19.1.0",
